--- a/P010704.opf/meta.yml
+++ b/P010704.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010704
+id: P010704
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W19605
   title: ཚད་མ་རིག་གཏེར་གྱི་འགྲེལ་པ་རིགས་ལམ་རབ་གསལ།
-  volume: ''
   author: ''
+  volumes: {}
