--- a/P010704.opf/layers/v001/Pagination.yml
+++ b/P010704.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 19418d83b542445d9fc87089366d6b8c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d3e4758217364422a107418fe9d2a748:
