--- a/P010704.opf/meta.yml
+++ b/P010704.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P010704
 initial_creation_type: ocr
+created_at: 30/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W19605
   title: ཚད་མ་རིག་གཏེར་གྱི་འགྲེལ་པ་རིགས་ལམ་རབ་གསལ།
