--- a/P010704.opf/meta.yml
+++ b/P010704.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P010704
 initial_creation_type: ocr
 created_at: 30/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-20 10:20:43.457892
 source_metadata:
   id: bdr:W19605
   title: ཚད་མ་རིག་གཏེར་གྱི་འགྲེལ་པ་རིགས་ལམ་རབ་གསལ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 283
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
